fully corrected erros

--- a/index.html
+++ b/index.html
@@ -851,23 +851,23 @@
                     <div class="achievement-description">
                         Scaled cross-functional growth team from 8 to 25 members across engineering, design, and analytics
                     </div>
-                    <div class="achievement-period">2022 - Present</div>
+                    <div class="achievement-period"></div>
                 </div>
                 
                 <div class="achievement-card">
                     <div class="achievement-icon">💰</div>
                     <h3>ROI Achievement</h3>
-                    <div class="achievement-metric">520%</div>
+                    <div class="achievement-metric">60%</div>
                     <div class="achievement-description">
                         Return on growth marketing spend through advanced attribution modeling and channel optimization
                     </div>
-                    <div class="achievement-period">2023</div>
+                    <div class="achievement-period"></div>
                 </div>
                 
                 <div class="achievement-card">
                     <div class="achievement-icon">⚡</div>
                     <h3>Product Velocity</h3>
-                    <div class="achievement-metric">180%</div>
+                    <div class="achievement-metric">90%</div>
                     <div class="achievement-description">
                         Increase in experiment velocity through automated testing infrastructure and streamlined processes
                     </div>
